--- a/bert/requirements-embeddings.txt
+++ b/bert/requirements-embeddings.txt
@@ -1,7 +1,12 @@
 beir
-apache_beam
 openai
 cohere
 voyageai
 tiktoken
 multiprocess==0.70.14
+bs4
+omegaconf
+einops
+opt_einsum
+composer
+rank_bm25
