--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -2,8 +2,9 @@ name: Build FlashMM Wheels with CUDA
 
 on:
   push:
+    # push on github tags that start with "wheel"
     tags:
-      - "v*"
+      - "wheel*"
 
 jobs:
   release:
