--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -7,20 +7,20 @@ on:
       - "wheel*"
 
 jobs:
-  release:
-    # Retrieve tag and create release
-    name: Create Release
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+  # release:
+  #   # Retrieve tag and create release
+  #   name: Create Release
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
 
-      - name: Extract branch info
-        shell: bash
-        run: |
-          echo "release_tag=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+  #     - name: Extract branch info
+  #       shell: bash
+  #       run: |
+  #         echo "release_tag=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       # - name: Create Release
       #   id: create_release
@@ -40,8 +40,9 @@ jobs:
     
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-latest]
-        pyver: ["3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-20.04] #, windows-latest]
+        # pyver: ["3.8", "3.9", "3.10", "3.11"]
+        pyver: ["3.10"]
         cuda: ["11.8.0", "12.1.1"]
     defaults:
       run:
@@ -117,8 +118,17 @@ jobs:
 
           python setup.py sdist bdist_wheel
       
-      - name: Upload Assets
-        uses: shogo82148/actions-upload-release-asset@v1
+      - name: Release with Notes
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./csrc/flashmm/dist/*.whl
+          files: |
+            ./csrc/flashmm/dist/*.whl
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Upload Assets
+      #   uses: shogo82148/actions-upload-release-asset@v1
+      #   with:
+      #     upload_url: ${{ needs.release.outputs.upload_url }}
+      #     asset_path: ./csrc/flashmm/dist/*.whl
