--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -40,8 +40,8 @@ jobs:
     
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-latest]
-        pyver: ["3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-20.04] #, windows-latest]
+        # pyver: ["3.8", "3.9", "3.10", "3.11"]
         pyver: ["3.10"]
         cuda: ["11.8.0", "12.1.1"]
     defaults:
