--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -17,18 +17,14 @@ jobs:
     
     strategy:
       matrix:
-        os: [ubuntu-20.04] # , windows-latest]
-        #  pyver: ["3.8", "3.9", "3.10", "3.11"]
-        pyver: ["3.10"]
+        os: [ubuntu-20.04, windows-latest]
+        pyver: ["3.8", "3.9", "3.10", "3.11"]
         cuda: ["11.8.0", "12.1.1"]
-        # cudaarchlist: ["6.0;6.1;6.2;7.0;7.5;8.0;8.6+PTX", "6.0;6.1;6.2;7.0;7.5;7.0;7.5"]
     defaults:
       run:
         shell: pwsh
     env:
       CUDA_VERSION: ${{ matrix.cuda }}
-      # Do not set archlist for now.
-      # CUDA_ARCH_LIST: ${{ matrix.cudaarchlist }}
     
     steps:
       - name: Free Disk Space
@@ -103,9 +99,3 @@ jobs:
             ./csrc/flashmm/dist/*.whl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Upload Assets
-      #   uses: shogo82148/actions-upload-release-asset@v1
-      #   with:
-      #     upload_url: ${{ needs.release.outputs.upload_url }}
-      #     asset_path: ./csrc/flashmm/dist/*.whl
