--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -69,8 +69,8 @@ jobs:
           $cudaVersion = $env:CUDA_VERSION.Replace('.', '')
           $cudaVersionPytorch = $cudaVersion.Substring(0, $cudaVersion.Length - 1)
           if ([int]$cudaVersionPytorch -gt 118) { $pytorchVersion = "torch==2.1.0" } else {$pytorchVersion = "torch==2.0.1"}
-          python -m pip install --upgrade --no-cache-dir $pytorchVersion+cu$cudaVersionPytorch --index-url https://download.pytorch.org/whl/cu$cudaVersionPytorch
-          python -m pip install build setuptools wheel ninja
+          python -m pip3 install --upgrade --no-cache-dir $pytorchVersion+cu$cudaVersionPytorch --index-url https://download.pytorch.org/whl/cu$cudaVersionPytorch
+          python -m pip3 install build setuptools wheel ninja numpy
 
           # Print version information
           python --version
