--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -91,13 +91,18 @@ jobs:
           python3 setup.py sdist bdist_wheel 
 
           # rename wheel to reflect cuda version and torch version bash: dist/*.whl
-          python3 ${{ github.workspace }}/.github/workflows/scripts/rename_whl_with_torch_version.py        
+          $WHEEL_PATH = python3 ${{ github.workspace }}/.github/workflows/scripts/rename_whl_with_torch_version.py
+          # append to env
+          echo "WHEEL_PATH=$WHEEL_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       
       - name: Release with Notes
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            "${{ github.workspace }}/${{ env.SETUPPYPATH }}/dist/*.whl"
+            "${{ env.WHEEL_PATH }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # from previous step
+          WHEEL_PATH: ${{ env.WHEEL_PATH }}
+
