--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -92,7 +92,7 @@ jobs:
 
           # rename wheel to reflect cuda version and torch version bash: dist/*.whl
           $WHEEL_PATH = python3 ${{ github.workspace }}/.github/workflows/scripts/rename_whl_with_torch_version.py
-          # append to env
+          # append to powershell env
           echo "WHEEL_PATH=$WHEEL_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       
       - name: Release with Notes
@@ -100,7 +100,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            "${{ env.WHEEL_PATH }}"
+            ${{ env.WHEEL_PATH }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # from previous step
