--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -91,16 +91,16 @@ jobs:
           python3 setup.py sdist bdist_wheel 
 
           # rename wheel to reflect cuda version and torch version bash: dist/*.whl
-          $WHEEL_PATH = python3 -c "
-import os, shutil, glob, re, torch;\
-torch_name  = 'torch' + (torch.__version__.split('+')[0] + 'cu' + torch.version.cuda).replace('.', '');\
-file = glob.glob(os.path.join('dist', '*.whl'))[0];\
-current_dir = os.getcwd();\
-insert_pos = re.search('-cp[0-9]+-cp[0-9]+-', file).start();\
-new_name = f'{file[:insert_pos]}+{torch_name}{file[insert_pos:]}';\
-print(os.path.join(os.getcwd(), new_name));\
-shutil.move(file, new_name);\
-"         
+          $WHEEL_PATH = python3 -c "if True: \
+          import os, shutil, glob, re, torch;\
+          torch_name  = 'torch' + (torch.__version__.split('+')[0] + 'cu' + torch.version.cuda).replace('.', '');\
+          file = glob.glob(os.path.join('dist', '*.whl'))[0];\
+          current_dir = os.getcwd();\
+          insert_pos = re.search('-cp[0-9]+-cp[0-9]+-', file).start();\
+          new_name = f'{file[:insert_pos]}+{torch_name}{file[insert_pos:]}';\
+          print(os.path.join(os.getcwd(), new_name));\
+          shutil.move(file, new_name);"         
+          
           ${{ github.workspace }}/.github/workflows/scripts/rename_whl_with_torch_version.py
           # append to powershell env
           echo "WHEEL_PATH=$WHEEL_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
