--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -1,45 +1,45 @@
-# # MIT Licence, (c) Michael Feil, adapted from Casper Hansen's aws wheels
-# # https://github.com/casper-hansen/AutoAWQ/tree/main/.github/workflows
+# MIT Licence, (c) Michael Feil, adapted from Casper Hansen's aws wheels
+# https://github.com/casper-hansen/AutoAWQ/tree/main/.github/workflows
 
-# name: Build Wheels with CUDA
+name: Build Wheels with CUDA
 
-# on:
-#   push:
-#     # push on github tags that start with "wheel"
-#     tags:
-#       - "wheel*"
+on:
+  push:
+    # push on github tags that start with "wheel"
+    tags:
+      - "wheel*"
 
-# jobs:
+jobs:
 
-#   build_wheels:
-#     name: Build Cuda Wheels for torch
-#     runs-on: ${{ matrix.os }}
+  build_wheels:
+    name: Build Cuda Wheels for torch
+    runs-on: ${{ matrix.os }}
     
-#     strategy:
-#       matrix:
-#         os: [ubuntu-20.04, windows-latest]
-#         pyver: ["3.8", "3.9", "3.10", "3.11"]
-#         cuda: ["11.8.0", "12.1.1"]
-#     defaults:
-#       run:
-#         shell: pwsh
-#     env:
-#       CUDA_VERSION: ${{ matrix.cuda }}
-#       # define where the setup.py is located
-#       SETUPPYPATH: ${{ github.workspace }}/csrc/flashmm
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, windows-latest]
+        # pyver: ["3.8", "3.9", "3.10", "3.11"]
+        cuda: ["11.8.0", "12.1.1"]
+    defaults:
+      run:
+        shell: pwsh
+    env:
+      CUDA_VERSION: ${{ matrix.cuda }}
+      # define where the setup.py is located
+      SETUPPYPATH: ${{ github.workspace }}/csrc/flashmm
     
-#     steps:
-#       - name: Free Disk Space
-#         uses: jlumbroso/free-disk-space@v1.3.0
-#         if: runner.os == 'Linux'
-#         with:
-#           tool-cache: false
-#           android: true
-#           dotnet: true
-#           haskell: true
-#           large-packages: false
-#           docker-images: true
-#           swap-storage: false
+    steps:
+      - name: Free Disk Space
+        uses: jlumbroso/free-disk-space@v1.3.0
+        if: runner.os == 'Linux'
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: false
+          docker-images: true
+          swap-storage: false
         
 #       - uses: actions/checkout@v3
 
