--- a/.github/workflows/build_flashmm.yaml
+++ b/.github/workflows/build_flashmm.yaml
@@ -11,5 +11,5 @@ jobs:
     uses:
       ./.github/workflows/workflow_build_cuda_wheels.yaml
     with: # ${{ github.workspace }}
-      setuppypath: ./csrc/flashmm
+      setuppypath: "csrc/flashmm"
     secrets: inherit
